Removed sodium package

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Easily create a neon sign builder with a shortcode",
     "type": "project",
     "require": {
-        "automattic/woocommerce": "^3.0",
-        "paragonie/sodium_compat": "^1.17"
+        "automattic/woocommerce": "^3.0"
     },
     "license": "pg1",
     "autoload": {
